[package]
name = "sever"
description = "Coerce hardlinks into new files"
version = "0.1.0"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
parallel = ["tokio"]
threads = ["parallel", "tokio/rt-threaded"]

# use PRETTY_ENV_LOGGER I guess
# On trace: Display no. of hardlinks for each file
# On debug: Display reason why why metadata() failes, instead of just "warn: stat failed"

[dependencies]
cfg-if = "0.1.10"
tokio = {version = "0.2", features = ["full"], optional = true}
