[package]
name = "sever"
description = "Coerce hardlinks into new files"
version = "1.0.1"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"
readme = "README.org"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel", "limit-concurrency", "splash", "limit-recursion"]

# Limit the concurrent operations of parallel mode to 4096
limit-concurrency = ["parallel"]
# Handle directories recursively
recursive = []
limit-recursion = ["recursive"]
splash = []
parallel = ["tokio", "futures"]
threads = ["parallel", "tokio/rt-threaded"]

# use PRETTY_ENV_LOGGER I guess
# On trace: Display no. of hardlinks for each file
# On debug: Display reason why why metadata() failes, instead of just "warn: stat failed"

[dependencies]
cfg-if = "0.1.10"
tokio = {version = "0.2", features = ["rt-core", "rt-util", "io-driver", "fs", "macros", "sync", "stream"], optional = true}
log = "0.4.11"
pretty_env_logger = "0.4.0"
color-eyre = {version = "0.5.6", default-features=false}
futures = {version = "0.3.5", optional = true}
lazy_static = "1.4.0"
uuid = {version = "0.8.1", features = ["v4"]}
recolored = "1.9.3"

[build-dependencies]
rustc_version = "0.2"
