[package]
name = "sever"
description = "Coerce hardlinks into new files"
version = "1.1.0"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"
readme = "README.org"
license = "GPL-3.0-or-later"

[features]
default = ["parallel", "limit-concurrency", "splash", "limit-recursion"]

# Limit the concurrent operations of parallel mode to 4096
limit-concurrency = ["parallel"]
# Handle directories recursively
recursive = []
# Limit the max recursion depth to 256
limit-recursion = ["recursive"]
# Show splash message when ran with no arguments
splash = []
# Run operations in parallel
parallel = ["tokio", "futures", "pin-project"]
# Run on a thread pool
threads = ["parallel", "tokio/rt-threaded"]
# Use SHA256 hash algorithm for argument file deduping instead of default hasher.
paranoid-dedup = ["sha2"]

[dependencies]
cfg-if = "0.1.10"
tokio = {version = "0.2", features = ["rt-core", "rt-util", "io-driver", "fs", "macros", "sync", "stream"], optional = true}
log = "0.4.11"
pretty_env_logger = "0.4.0"
color-eyre = {version = "0.5.6", default-features=false}
futures = {version = "0.3.5", optional = true}
lazy_static = "1.4.0"
uuid = {version = "0.8.1", features = ["v4"]}
recolored = "1.9.3"
pin-project = {version = "0.4.26", optional=true}
sha2 = {version = "0.9.1", optional=true}

[build-dependencies]
rustc_version = "0.2"
